# asio-py

./: CMakeLists.txt  clang  conanfile.txt
include/asio-py/: any_io_executor.hpp  awaitable.hpp  cancellation_signal.hpp  cancellation_state.hpp  cancellation_type.hpp  co_spawn.hpp  completion_token.hpp  defer.hpp  detached.hpp  dispatch.hpp  error.hpp  execution.hpp  execution_context.hpp  io_context.hpp  pipe.hpp  post.hpp  prefer.hpp  query.hpp  read.hpp  register_all.hpp  require.hpp  strand.hpp  system_context.hpp  this_coro.hpp  thread_pool.hpp  timer.hpp  use_awaitable.hpp  use_future.hpp  write.hpp
include/asio-py/detail/: exceptions.hpp  function.hpp  helper.hpp  typename.hpp
include/asio-py/helpers/: options.hpp  tag.hpp  template.hpp
include/asio-py/ip/: basic_resolver.hpp  tcp.hpp
src/: module.cpp
src/asio-py/: cancellation_signal.cpp  cancellation_state.cpp  cancellation_type.cpp  co_spawn.cpp  detached.cpp  error.cpp  execution.cpp  execution_context.cpp  io_context.cpp  pipe.cpp  register_all.cpp  system_context.cpp  this_coro.cpp  thread_pool.cpp  timer.cpp
src/asio-py/ip/: tcp.cpp
test/: CMakeLists.txt  embed.cpp  io_context.py  pipe.py  template_test.py  template_test_impl.cpp
